# pe-lsdj

./: .gitignore  README.md  generate.ipynb  generate.py  models.py  pyproject.toml  train.ipynb
.github/workflows/: python-tests.yml
bread/: bread.py
data/: crshhh.lsdsng  equus.lsdsng  lsdj_test.sav  orbgen.sav  orbital-final.lsdsng  organelle.lsdsng  tohou-final.lsdsng  tohou-final.raw
docs/: devlog.md  model_devlog.md  token_spec.md
pylsdj/: __init__.py  bread_spec.py  filepack.py  savfile.py  song.py  speech_instrument.py  table.py  test_blockutils.py  test_filepack.py  utils.py  wave_instrument.py
scripts/: average_weights.py  check_fx_cmd_dist.py  inspect_logits.py  lsdj_replay.py  lsdj_stream.py
src/pe_lsdj/: __init__.py  constants.py  detokenizer.py  generation.py  songfile.py  tokenizer.py  training.py
src/pe_lsdj/docs/: token_spec.md
src/pe_lsdj/embedding/: __init__.py  base.py  fx.py  instrument.py  position.py  song.py
src/pe_lsdj/models/: __init__.py  decoders.py  transformer.py
src/pe_lsdj/streaming/: README.md  __init__.py  alloc.py  buffer.py  session.py  sram.py  webapp.py
src/pe_lsdj/tokenizer/: detokenize.py  songfile.py  tokenize.py
tests/: conftest.py  test_embedders.py  test_generation.py  test_songfile.py  test_streaming.py  test_tokenizer.py  test_training.py  test_transformer.py
